# code-camp-2019

./: README.md  face_utility.py  main.py  play.py  player_info.json  pyproject.toml
faces/: faces.npy
